--- a/Kian_code/Controllers/PD.ipynb
+++ b/Kian_code/Controllers/PD.ipynb
@@ -347,9 +347,180 @@
     "\n",
     "\n",
     "\n",
-    "plotter.animate_pendulum(frames_data, ref_pos=xy_des, actuator=True, file_name=file_name_mp4, fps = 100)\n",
-    "#plotter.animate_pendulum(frames_data, ref_pos=None, actuator=False, file_name=file_name_mp4, fps = 100)\n",
-    "print(len(frames_data[0][0]))"
+    "plotter.animate_pendulum(frames_data, ref_poss=ref_poss, plot_actuator=True, file_name=file_name_mp4, fps = 1/(dt*stride), dt = dt*stride)\n",
+    "#plotter.animate_pendulum(frames_data, ref_pos=None, plot_actuator=False, file_name=file_name_mp4, fps = 1/(dt*stride), dt = dt*stride)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "from torchdiffeq import odeint\n",
+    "\n",
+    "class FeedbackODE(torch.nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super().__init__()\n",
+    "\n",
+    "    def forward(self, t, y):\n",
+    "        print(\"t:\", t.item())\n",
+    "        q, q_d = y[0], y[1]\n",
+    "\n",
+    "        print(\"q:\", q[0,0].item(), q[0,1].item())\n",
+    "\n",
+    "        th = model.encoder(q)\n",
+    "        th_d = (model.jacobian_enc(q) @ q_d.T).T\n",
+    "\n",
+    "        J_h = model.jacobian_enc(q)\n",
+    "        J_h_trans = torch.transpose(J_h, 0, 1)\n",
+    "\n",
+    "        is_clockwise = check_clockwise(q.squeeze(0))\n",
+    "        J_h_inv = model.jacobian_dec(th, is_clockwise)\n",
+    "        J_h_inv_trans = torch.transpose(J_h_inv, 0, 1)\n",
+    "\n",
+    "        M_q, C_q, G_q = dynamics.dynamical_matrices(rp, q.squeeze(0), q_d.squeeze(0))\n",
+    "        A_q = dynamics.input_matrix(rp, q.squeeze(0))\n",
+    "        #print(\"M_q:\\n\", M_q)\n",
+    "        #print(\"C_q:\\n\", C_q)\n",
+    "        #print(\"G_q:\\n\", G_q)\n",
+    "        A_th = transforms.transform_input_matrix_from_inverse_trans(A_q, J_h_inv_trans, device)\n",
+    "        #print(\"A_th:\\n\", A_th)\n",
+    "        u = torch.pinverse(A_th) @ ((Kp @ (th_des - th).T + Kd @ (th_d_des - th_d).T))\n",
+    "\n",
+    "        tau_q = A_q @ u\n",
+    "        q_dd = (torch.pinverse(M_q) @ (tau_q - C_q @ q_d.T - G_q)).T\n",
+    "        print(\"q_dd:\", q_dd)\n",
+    "        print(\"\\n\")\n",
+    "        return torch.stack([q_d, q_dd])  # Return (dq/dt, dq_d/dt)\n",
+    "\n",
+    "# Initial conditions\n",
+    "y0 = torch.stack([q_start, q_d_start])\n",
+    "\n",
+    "# Time span for integration\n",
+    "t_span = torch.linspace(0., 1, 10)  # Adjust as needed\n",
+    "\n",
+    "# Solve the system\n",
+    "sol = odeint(FeedbackODE(), y0, t_span, method='rk4')  # Use 'bdf' for stiff problems\n",
+    "\n",
+    "q_sol, q_d_sol = sol[:, 0, :], sol[:, 1, :]\n",
+    "\n",
+    "#print(q_sol)\n",
+    "#print(q_d_sol)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import warnings\n",
+    "warnings.filterwarnings(\"ignore\")\n",
+    "\n",
+    "def check_clockwise_vectorized(q):\n",
+    "    \"\"\"\n",
+    "    Expects q to be a tensor of shape (N,2) where each row is [q1, q2].\n",
+    "    Returns two boolean masks: (cw_mask, ccw_mask), where:\n",
+    "      - cw_mask[i] is True if the i-th configuration is elbow clockwise.\n",
+    "      - ccw_mask[i] is True if the i-th configuration is elbow counterclockwise.\n",
+    "    \n",
+    "    The logic is as follows (from your original function):\n",
+    "      If q2 lies between q1 and q1+π, or between q1-2π and q1-π, then the configuration\n",
+    "      is considered counterclockwise. Otherwise it is clockwise.\n",
+    "    \"\"\"\n",
+    "    q1 = q[:, 0]\n",
+    "    q2 = q[:, 1]\n",
+    "    cond_ccw = ((q2 >= q1) & (q2 <= q1 + torch.pi)) | ((q2 >= q1 - 2 * torch.pi) & (q2 <= q1 - torch.pi))\n",
+    "    cw_mask = ~cond_ccw\n",
+    "    ccw_mask = cond_ccw\n",
+    "    return cw_mask, ccw_mask\n",
+    "\n",
+    "\n",
+    "print(\"xy_des_real\", xy_des_real)\n",
+    "print(\"xy_des_est\", xy_des_est)\n",
+    "\n",
+    "# Define the number of grid points along each dimension.\n",
+    "n_points = 200\n",
+    "\n",
+    "# Create 1D tensors for q1 and q2 in the range [-pi, 0]\n",
+    "q1_vals = torch.linspace(-np.pi, np.pi, n_points)\n",
+    "q2_vals = torch.linspace(-np.pi, np.pi, n_points)\n",
+    "\n",
+    "# Create a 2D grid (meshgrid) of q values.\n",
+    "# (Note: using indexing='ij' so that the first axis corresponds to q1 and the second to q2)\n",
+    "q1_grid, q2_grid = torch.meshgrid(q1_vals, q2_vals, indexing='ij')\n",
+    "\n",
+    "# Stack the grid to get a tensor of shape (n_points*n_points, 2)\n",
+    "q_grid = torch.stack([q1_grid.flatten(), q2_grid.flatten()], dim=1)\n",
+    "\n",
+    "# === Compute theta1 and theta2 using the analytic encoder functions ===\n",
+    "# We use torch.vmap to evaluate the functions over the batch of q values.\n",
+    "# Note: encoder_theta_1_ana and encoder_theta_2_ana each return a tuple (theta, theta).\n",
+    "theta_out = torch.vmap(model.enc)(q_grid)\n",
+    "\n",
+    "theta1 = theta_out[:, 0]\n",
+    "theta2 = theta_out[:, 1]\n",
+    "\n",
+    "# Since q1_grid and q2_grid are already on a mesh, we can compute x_end and y_end elementwise.\n",
+    "x_end = rp[\"l1\"] * torch.cos(q_grid[:, 0]) + rp[\"l2\"] * torch.cos(q_grid[:, 1])\n",
+    "y_end = rp[\"l1\"] * torch.sin(q_grid[:, 0]) + rp[\"l2\"] * torch.sin(q_grid[:, 1])\n",
+    "\n",
+    "# --- Determine configuration (clockwise vs. counterclockwise) for each q ---\n",
+    "cw_mask, ccw_mask = check_clockwise_vectorized(q_grid)\n",
+    "\n",
+    "# --- Filter data for each configuration ---\n",
+    "# Clockwise points\n",
+    "x_end_cw    = x_end[cw_mask].detach().cpu().numpy()\n",
+    "y_end_cw    = y_end[cw_mask].detach().cpu().numpy()\n",
+    "theta1_cw   = theta1[cw_mask].detach().cpu().numpy()\n",
+    "theta2_cw   = theta2[cw_mask].detach().cpu().numpy()\n",
+    "\n",
+    "# Counterclockwise points\n",
+    "x_end_ccw   = x_end[ccw_mask].detach().cpu().numpy()\n",
+    "y_end_ccw   = y_end[ccw_mask].detach().cpu().numpy()\n",
+    "theta1_ccw  = theta1[ccw_mask].detach().cpu().numpy()\n",
+    "theta2_ccw  = theta2[ccw_mask].detach().cpu().numpy()\n",
+    "\n",
+    "# --- Plotting: Create 4 scatter plots ---\n",
+    "# We'll create a 2x2 grid of subplots:\n",
+    "#   - Top row: elbow clockwise configurations\n",
+    "#       * Left: theta1 vs. (x,y)\n",
+    "#       * Right: theta2 vs. (x,y)\n",
+    "#   - Bottom row: elbow counterclockwise configurations\n",
+    "#       * Left: theta1 vs. (x,y)\n",
+    "#       * Right: theta2 vs. (x,y)\n",
+    "fig, axes = plt.subplots(2, 2, figsize=(14, 10))\n",
+    "\n",
+    "# --- Top row: Clockwise ---\n",
+    "sc1 = axes[0, 0].scatter(x_end_cw, y_end_cw, c=theta1_cw, cmap='viridis', s=5)\n",
+    "axes[0, 0].set_title(\"Theta1 - Clockwise\")\n",
+    "axes[0, 0].set_xlabel(\"x\")\n",
+    "axes[0, 0].set_ylabel(\"y\")\n",
+    "plt.colorbar(sc1, ax=axes[0, 0])\n",
+    "\n",
+    "sc2 = axes[0, 1].scatter(x_end_cw, y_end_cw, c=theta2_cw, cmap='viridis', s=5)\n",
+    "axes[0, 1].set_title(\"Theta2 - Clockwise\")\n",
+    "axes[0, 1].set_xlabel(\"x\")\n",
+    "axes[0, 1].set_ylabel(\"y\")\n",
+    "plt.colorbar(sc2, ax=axes[0, 1])\n",
+    "\n",
+    "# --- Bottom row: Counterclockwise ---\n",
+    "sc3 = axes[1, 0].scatter(x_end_ccw, y_end_ccw, c=theta1_ccw, cmap='viridis', s=5)\n",
+    "axes[1, 0].set_title(\"Theta1 - Counterclockwise\")\n",
+    "axes[1, 0].set_xlabel(\"x\")\n",
+    "axes[1, 0].set_ylabel(\"y\")\n",
+    "plt.colorbar(sc3, ax=axes[1, 0])\n",
+    "\n",
+    "sc4 = axes[1, 1].scatter(x_end_ccw, y_end_ccw, c=theta2_ccw, cmap='viridis', s=5)\n",
+    "axes[1, 1].set_title(\"Theta2 - Counterclockwise\")\n",
+    "axes[1, 1].set_xlabel(\"x\")\n",
+    "axes[1, 1].set_ylabel(\"y\")\n",
+    "plt.colorbar(sc4, ax=axes[1, 1])\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
    ]
   },
   {
@@ -501,67 +672,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Set up q_est and q_real to be the same\n",
-    "q_est = torch.tensor([[-torch.pi/4, -torch.pi/2]]).requires_grad_(True)\n",
-    "q_d_est = torch.tensor([[torch.pi+0.1, -torch.pi/2]]).requires_grad_(True)\n",
-    "\n",
-    "# Calculate th\n",
-    "th = model.encoder(q_est)\n",
-    "th_d = (model.jacobian_enc(q_est) @ q_d_est.T).T\n",
-    "\n",
-    "# Calculate Jacobians\n",
-    "J_h = model.jacobian_enc(q_est)\n",
-    "J_h_trans = torch.transpose(J_h, 0, 1)\n",
-    "\n",
-    "J_h_inv = model.jacobian_dec(th)\n",
-    "J_h_inv_trans = torch.transpose(J_h_inv, 0, 1)\n",
-    "\n",
-    "J_h = model.jacobian_enc(q_est)\n",
-    "J_h_trans = torch.transpose(J_h, 0, 1)\n",
-    "\n",
-    "J_h_inv = model.jacobian_dec(th)\n",
-    "J_h_inv_trans = torch.transpose(J_h_inv, 0, 1)\n",
-    "\n",
-    "# Obtain dynamic matrices in q-space\n",
-    "M_q_est, C_q_est, G_q_est = dynamics.dynamical_matrices(rp, q_est.squeeze(0), q_d_est.squeeze(0))\n",
-    "A_q_est = dynamics.input_matrix(rp , q_est.squeeze(0))\n",
-    "\n",
-    "# Obtain dynamic matrices in theta-space\n",
-    "M_th, C_th, G_th = transforms.transform_dynamical_from_inverse(M_q_est, C_q_est, G_q_est, th, th_d, J_h_inv, J_h_inv_trans)\n",
-    "A_th = transforms.transform_input_matrix_from_inverse_trans(A_q_est, J_h_inv_trans, device)\n",
-    "\n",
-    "# Reconstruct dynamical matrices from theta-space to q-space\n",
-    "M_recon = J_h_trans @ M_th @ J_h\n",
-    "C_recon = torch.zeros(M_recon.size()).to(M_recon.device)\n",
-    "\n",
-    "for i in range(C_recon.size(0)):\n",
-    "    for j in range(C_recon.size(1)):\n",
-    "        for k in range(C_recon.size(1)):\n",
-    "            M_recon_dot_ijk = torch.autograd.grad(M_recon[i,j], q_est, create_graph=True)[0][0,k]\n",
-    "            M_recon_dot_ikj = torch.autograd.grad(M_recon[i,k], q_est, create_graph=True)[0][0,j]\n",
-    "            M_recon_dot_jki = torch.autograd.grad(M_recon[j,k], q_est, create_graph=True)[0][0,i]\n",
-    "\n",
-    "            C_recon[i, j] += 0.5 * (M_recon_dot_ijk + M_recon_dot_ikj - M_recon_dot_jki) * q_d_est[0, k]\n",
-    "\n",
-    "G_recon = J_h_trans @ G_th\n",
-    "\n",
-    "\n",
-    "print(\"Mqest:\\n\", M_q_est)  \n",
-    "print(\"Mrecon:\\n\", M_recon)\n",
-    "\n",
-    "print(\"Cqest:\\n\", C_q_est)\n",
-    "print(\"Crecon:\\n\", C_recon)\n",
-    "\n",
-    "print(\"Gqest:\\n\", G_q_est)\n",
-    "print(\"Grecon:\\n\", G_recon)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -570,20 +680,6 @@
     "3. Map both to theta\n",
     "4. Calculate distance "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
