Support plotting theta as function of q for multiple models

--- a/Kian_code/Controllers/PD.ipynb
+++ b/Kian_code/Controllers/PD.ipynb
@@ -458,69 +458,64 @@
     "# === Compute theta1 and theta2 using the analytic encoder functions ===\n",
     "# We use torch.vmap to evaluate the functions over the batch of q values.\n",
     "# Note: encoder_theta_1_ana and encoder_theta_2_ana each return a tuple (theta, theta).\n",
-    "theta_out = torch.vmap(model.enc)(q_grid)\n",
     "\n",
-    "theta1 = theta_out[:, 0]\n",
-    "theta2 = theta_out[:, 1]\n",
+    "for model in models:\n",
+    "  theta_out = model.encoder(q_grid)\n",
+    "  #theta_out = torch.vmap(model.encoder)(q_grid)\n",
     "\n",
-    "# Since q1_grid and q2_grid are already on a mesh, we can compute x_end and y_end elementwise.\n",
-    "x_end = rp[\"l1\"] * torch.cos(q_grid[:, 0]) + rp[\"l2\"] * torch.cos(q_grid[:, 1])\n",
-    "y_end = rp[\"l1\"] * torch.sin(q_grid[:, 0]) + rp[\"l2\"] * torch.sin(q_grid[:, 1])\n",
+    "  theta1 = theta_out[:, 0]\n",
+    "  theta2 = theta_out[:, 1]\n",
     "\n",
-    "# --- Determine configuration (clockwise vs. counterclockwise) for each q ---\n",
-    "cw_mask, ccw_mask = check_clockwise_vectorized(q_grid)\n",
+    "  # Since q1_grid and q2_grid are already on a mesh, we can compute x_end and y_end elementwise.\n",
+    "  x_end = rp[\"l1\"] * torch.cos(q_grid[:, 0]) + rp[\"l2\"] * torch.cos(q_grid[:, 1])\n",
+    "  y_end = rp[\"l1\"] * torch.sin(q_grid[:, 0]) + rp[\"l2\"] * torch.sin(q_grid[:, 1])\n",
     "\n",
-    "# --- Filter data for each configuration ---\n",
-    "# Clockwise points\n",
-    "x_end_cw    = x_end[cw_mask].detach().cpu().numpy()\n",
-    "y_end_cw    = y_end[cw_mask].detach().cpu().numpy()\n",
-    "theta1_cw   = theta1[cw_mask].detach().cpu().numpy()\n",
-    "theta2_cw   = theta2[cw_mask].detach().cpu().numpy()\n",
+    "  # --- Determine configuration (clockwise vs. counterclockwise) for each q ---\n",
+    "  cw_mask, ccw_mask = check_clockwise_vectorized(q_grid)\n",
     "\n",
-    "# Counterclockwise points\n",
-    "x_end_ccw   = x_end[ccw_mask].detach().cpu().numpy()\n",
-    "y_end_ccw   = y_end[ccw_mask].detach().cpu().numpy()\n",
-    "theta1_ccw  = theta1[ccw_mask].detach().cpu().numpy()\n",
-    "theta2_ccw  = theta2[ccw_mask].detach().cpu().numpy()\n",
+    "  # --- Filter data for each configuration ---\n",
+    "  # Clockwise points\n",
+    "  x_end_cw    = x_end[cw_mask].detach().cpu().numpy()\n",
+    "  y_end_cw    = y_end[cw_mask].detach().cpu().numpy()\n",
+    "  theta1_cw   = theta1[cw_mask].detach().cpu().numpy()\n",
+    "  theta2_cw   = theta2[cw_mask].detach().cpu().numpy()\n",
     "\n",
-    "# --- Plotting: Create 4 scatter plots ---\n",
-    "# We'll create a 2x2 grid of subplots:\n",
-    "#   - Top row: elbow clockwise configurations\n",
-    "#       * Left: theta1 vs. (x,y)\n",
-    "#       * Right: theta2 vs. (x,y)\n",
-    "#   - Bottom row: elbow counterclockwise configurations\n",
-    "#       * Left: theta1 vs. (x,y)\n",
-    "#       * Right: theta2 vs. (x,y)\n",
-    "fig, axes = plt.subplots(2, 2, figsize=(14, 10))\n",
+    "  # Counterclockwise points\n",
+    "  x_end_ccw   = x_end[ccw_mask].detach().cpu().numpy()\n",
+    "  y_end_ccw   = y_end[ccw_mask].detach().cpu().numpy()\n",
+    "  theta1_ccw  = theta1[ccw_mask].detach().cpu().numpy()\n",
+    "  theta2_ccw  = theta2[ccw_mask].detach().cpu().numpy()\n",
     "\n",
-    "# --- Top row: Clockwise ---\n",
-    "sc1 = axes[0, 0].scatter(x_end_cw, y_end_cw, c=theta1_cw, cmap='viridis', s=5)\n",
-    "axes[0, 0].set_title(\"Theta1 - Clockwise\")\n",
-    "axes[0, 0].set_xlabel(\"x\")\n",
-    "axes[0, 0].set_ylabel(\"y\")\n",
-    "plt.colorbar(sc1, ax=axes[0, 0])\n",
+    "  fig, axes = plt.subplots(2, 2, figsize=(14, 10))\n",
     "\n",
-    "sc2 = axes[0, 1].scatter(x_end_cw, y_end_cw, c=theta2_cw, cmap='viridis', s=5)\n",
-    "axes[0, 1].set_title(\"Theta2 - Clockwise\")\n",
-    "axes[0, 1].set_xlabel(\"x\")\n",
-    "axes[0, 1].set_ylabel(\"y\")\n",
-    "plt.colorbar(sc2, ax=axes[0, 1])\n",
+    "  # --- Top row: Clockwise ---\n",
+    "  sc1 = axes[0, 0].scatter(x_end_cw, y_end_cw, c=theta1_cw, cmap='viridis', s=5)\n",
+    "  axes[0, 0].set_title(\"Theta1 - Clockwise\")\n",
+    "  axes[0, 0].set_xlabel(\"x\")\n",
+    "  axes[0, 0].set_ylabel(\"y\")\n",
+    "  plt.colorbar(sc1, ax=axes[0, 0])\n",
     "\n",
-    "# --- Bottom row: Counterclockwise ---\n",
-    "sc3 = axes[1, 0].scatter(x_end_ccw, y_end_ccw, c=theta1_ccw, cmap='viridis', s=5)\n",
-    "axes[1, 0].set_title(\"Theta1 - Counterclockwise\")\n",
-    "axes[1, 0].set_xlabel(\"x\")\n",
-    "axes[1, 0].set_ylabel(\"y\")\n",
-    "plt.colorbar(sc3, ax=axes[1, 0])\n",
+    "  sc2 = axes[0, 1].scatter(x_end_cw, y_end_cw, c=theta2_cw, cmap='viridis', s=5)\n",
+    "  axes[0, 1].set_title(\"Theta2 - Clockwise\")\n",
+    "  axes[0, 1].set_xlabel(\"x\")\n",
+    "  axes[0, 1].set_ylabel(\"y\")\n",
+    "  plt.colorbar(sc2, ax=axes[0, 1])\n",
     "\n",
-    "sc4 = axes[1, 1].scatter(x_end_ccw, y_end_ccw, c=theta2_ccw, cmap='viridis', s=5)\n",
-    "axes[1, 1].set_title(\"Theta2 - Counterclockwise\")\n",
-    "axes[1, 1].set_xlabel(\"x\")\n",
-    "axes[1, 1].set_ylabel(\"y\")\n",
-    "plt.colorbar(sc4, ax=axes[1, 1])\n",
+    "  # --- Bottom row: Counterclockwise ---\n",
+    "  sc3 = axes[1, 0].scatter(x_end_ccw, y_end_ccw, c=theta1_ccw, cmap='viridis', s=5)\n",
+    "  axes[1, 0].set_title(\"Theta1 - Counterclockwise\")\n",
+    "  axes[1, 0].set_xlabel(\"x\")\n",
+    "  axes[1, 0].set_ylabel(\"y\")\n",
+    "  plt.colorbar(sc3, ax=axes[1, 0])\n",
     "\n",
-    "plt.tight_layout()\n",
-    "plt.show()"
+    "  sc4 = axes[1, 1].scatter(x_end_ccw, y_end_ccw, c=theta2_ccw, cmap='viridis', s=5)\n",
+    "  axes[1, 1].set_title(\"Theta2 - Counterclockwise\")\n",
+    "  axes[1, 1].set_xlabel(\"x\")\n",
+    "  axes[1, 1].set_ylabel(\"y\")\n",
+    "  plt.colorbar(sc4, ax=axes[1, 1])\n",
+    "\n",
+    "  plt.tight_layout()\n",
+    "  plt.show()\n"
    ]
   },
   {
