--- a/Kian_code/Controllers/PD.ipynb
+++ b/Kian_code/Controllers/PD.ipynb
@@ -357,6 +357,62 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "datasets_q = [\n",
+    "    {\n",
+    "        \"name\": \"est\",\n",
+    "        \"values\": q_est_series.cpu().detach().numpy(),\n",
+    "        \"color\": \"tab:orange\"\n",
+    "    },\n",
+    "    {\n",
+    "        \"name\": \"real\",\n",
+    "        \"values\": q_real_series.cpu().detach().numpy(),\n",
+    "        \"color\": \"tab:blue\"\n",
+    "    }#,\n",
+    "    #{\n",
+    "    #    \"name\": \"naive_series\",\n",
+    "    #    \"values\": np.column_stack((np.sin(t_series + 1.0), np.cos(t_series + 1.0))),\n",
+    "    #    \"color\": \"red\"\n",
+    "    #}\n",
+    "]\n",
+    "datasets_th = [\n",
+    "    {\n",
+    "        \"name\": \"est\",\n",
+    "        \"values\": th_series.cpu().detach().numpy(),\n",
+    "        \"color\": \"tab:orange\"\n",
+    "    }#,56\n",
+    "    #{\n",
+    "    #    \"name\": \"ana\",\n",
+    "    #    \"values\": th_\n",
+    "    #    \"color\": \"tab:blue\"\n",
+    "    #}\n",
+    "]\n",
+    "\n",
+    "# Common labels for the plots.\n",
+    "name_q = \"q trajectory\"\n",
+    "name_th = \"th trajectory\"\n",
+    "t_series = torch.arange(0, 15, 0.01)\n",
+    "# Ensure the results directory exists.\n",
+    "result_path = \"./results\"\n",
+    "os.makedirs(result_path, exist_ok=True)\n",
+    "\n",
+    "# Create an instance of ErrorPlotter.\n",
+    "ep = pendulum_plot.Error_plotter(rp)\n",
+    "\n",
+    "# Prepare plot datasets for each column.\n",
+    "# Each call groups a set of datasets to be drawn in one subplot column.\n",
+    "column1 = ep.create_plot_dataset(datasets_q, t_series, name_q)\n",
+    "column2 = ep.create_plot_dataset(datasets_th, t_series, name_th)\n",
+    "\n",
+    "# Pass the list of columns (plot_dataset objects) to plot_multi.\n",
+    "ep.plot_multi([column1, column2], file_name=\"Trajectory_plots\", axes_names = [\"q\", \"th\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import torch\n",
     "from torchdiffeq import odeint\n",
     "\n",
@@ -376,7 +432,7 @@
     "        J_h = model.jacobian_enc(q)\n",
     "        J_h_trans = torch.transpose(J_h, 0, 1)\n",
     "\n",
-    "        is_clockwise = check_clockwise(q.squeeze(0))\n",
+    "        is_clockwise = transforms.check_clockwise(q.squeeze(0))\n",
     "        J_h_inv = model.jacobian_dec(th, is_clockwise)\n",
     "        J_h_inv_trans = torch.transpose(J_h_inv, 0, 1)\n",
     "\n",
@@ -419,6 +475,14 @@
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\")\n",
     "\n",
+    "\n",
+    "model_ana = autoencoders.Analytic_transformer(rp)\n",
+    "\n",
+    "model_NN = autoencoders.Autoencoder_double(rp).to(device)\n",
+    "model_location = '../Models/Split_AEs/ana_theta_0_loss_quart.pth'\n",
+    "model_NN.load_state_dict(torch.load(model_location, weights_only=True))\n",
+    "models = [model_ana, model_NN]\n",
+    "\n",
     "def check_clockwise_vectorized(q):\n",
     "    \"\"\"\n",
     "    Expects q to be a tensor of shape (N,2) where each row is [q1, q2].\n",
@@ -445,15 +509,15 @@
     "n_points = 200\n",
     "\n",
     "# Create 1D tensors for q1 and q2 in the range [-pi, 0]\n",
-    "q1_vals = torch.linspace(-np.pi, np.pi, n_points)\n",
-    "q2_vals = torch.linspace(-np.pi, np.pi, n_points)\n",
+    "q1_vals = torch.linspace(-np.pi, 0, n_points)\n",
+    "q2_vals = torch.linspace(-np.pi/2, np.pi/2, n_points)\n",
     "\n",
     "# Create a 2D grid (meshgrid) of q values.\n",
     "# (Note: using indexing='ij' so that the first axis corresponds to q1 and the second to q2)\n",
     "q1_grid, q2_grid = torch.meshgrid(q1_vals, q2_vals, indexing='ij')\n",
     "\n",
     "# Stack the grid to get a tensor of shape (n_points*n_points, 2)\n",
-    "q_grid = torch.stack([q1_grid.flatten(), q2_grid.flatten()], dim=1)\n",
+    "q_grid = torch.stack([q1_grid.flatten(), q2_grid.flatten()], dim=1).to(device)\n",
     "\n",
     "# === Compute theta1 and theta2 using the analytic encoder functions ===\n",
     "# We use torch.vmap to evaluate the functions over the batch of q values.\n",
