Shift datapoints for ccw autoencoder

--- a/Kian_code/Controllers/PD.ipynb
+++ b/Kian_code/Controllers/PD.ipynb
@@ -25,6 +25,8 @@
     "import Double_Pendulum.Lumped_Mass.dynamics as dynamics\n",
     "import Plotting.pendulum_plot as pendulum_plot\n",
     "\n",
+    "from functools import partial\n",
+    "\n",
     "\n",
     "\n",
     "%load_ext autoreload\n",
@@ -42,32 +44,14 @@
    "source": [
     "rp = robot_parameters.LUMPED_PARAMETERS\n",
     "plotter = pendulum_plot.Anim_plotter(rp)\n",
-    "neural_net = False\n",
+    "neural_net = True\n",
     "\n",
     "if neural_net:\n",
     "    model = autoencoders.Autoencoder_double(rp).to(device)\n",
-    "    model_location = '../Models/Split_AEs/ana_theta_loss.pth'\n",
+    "    model_location = '../Models/Split_AEs/Lumped_Mass_ccw_(2,5).pth'\n",
     "    model.load_state_dict(torch.load(model_location, weights_only=True))\n",
     "else:\n",
     "    model = autoencoders.Analytic_transformer(rp)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def check_clockwise(q):\n",
-    "    if (q[0,1] >= q[0,0] and q[0,1] <= q[0,0] + torch.pi) or (q[0,1] >= q[0,0] - 2 * torch.pi and q[0,1] <= q[0,0] - torch.pi):\n",
-    "        clockwise = False\n",
-    "    else:\n",
-    "        clockwise = True\n",
-    "    return clockwise\n",
-    "\n",
-    "\n",
-    "def wrap_to_pi(tensor):\n",
-    "    return (tensor + torch.pi) % (2 * torch.pi) - torch.pi"
    ]
   },
   {
@@ -94,9 +78,9 @@
     "#q_d_start = torch.tensor([[0.5, 0.5]]).requires_grad_().to(device)\n",
     "q_dd_start = torch.tensor([[0., 0.]]).requires_grad_().to(device)\n",
     "\n",
-    "is_clockwise_start = check_clockwise(q_start)\n",
+    "is_clockwise_start = transforms.check_clockwise(q_start.squeeze(0))\n",
     "\n",
-    "xy_des_real = torch.tensor([0., 0.5]).requires_grad_().to(device)\n",
+    "xy_des_real = torch.tensor([2., -2.]).requires_grad_().to(device)\n",
     "q_des = transforms.inverse_kinematics(rp, xy_des_real, is_clockwise=False).unsqueeze(0)\n",
     "#q_des = torch.tensor([[-torch.pi/2, -torch.pi/4]]).requires_grad_().to(device)\n",
     "q_d_des = torch.tensor([[0., 0.]]).requires_grad_().to(device)\n",
@@ -105,14 +89,16 @@
     "th_d_start = (model.jacobian_enc(q_start) @ q_d_start.T).T\n",
     "th_dd_start = torch.tensor([[0., 0.]]).requires_grad_().to(device) #TODO: Obtain accelerations in thetas\n",
     "\n",
-    "is_clockwise_des = check_clockwise(q_des)\n",
+    "is_clockwise_des = transforms.check_clockwise(q_des.squeeze(0))\n",
     "\n",
     "th_des = model.encoder(q_des)\n",
     "th_d_des = (model.jacobian_enc(q_des) @ q_d_des.T).T\n",
     "\n",
     "q_des_est = model.decoder(th_des, is_clockwise_des)\n",
     "q_d_des_est = (model.jacobian_dec(th_des, clockwise=is_clockwise_des) @ th_d_des.T).T\n",
-    "xy_des_est, _ = transforms.forward_kinematics(rp, q_des_est[0])"
+    "xy_des_est, _ = transforms.forward_kinematics(rp, q_des_est[0])\n",
+    "\n",
+    "print(xy_des_est)"
    ]
   },
   {
@@ -121,23 +107,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "th_series = th_start.clone().detach()\n",
-    "th_d_series = th_d_start.clone().detach()\n",
-    "th_dd_series = th_dd_start.clone().detach()\n",
+    "#th_series = th_start.clone().detach()\n",
+    "#th_d_series = th_d_start.clone().detach()\n",
+    "#th_dd_series = th_dd_start.clone().detach()\n",
     "\n",
+    "#q_est_series = model.decoder(th_start, clockwise=is_clockwise_start)\n",
+    "#q_d_est_series = (model.jacobian_dec(th_start, clockwise=is_clockwise_start) @ th_d_start.T).T\n",
+    "#q_dd_est_series = torch.zeros((1,2)).to(device)\n",
     "\n",
-    "q_est_series = model.decoder(th_start, clockwise=is_clockwise_start)\n",
-    "q_d_est_series = (model.jacobian_dec(th_start, clockwise=is_clockwise_start) @ th_d_start.T).T\n",
-    "q_dd_est_series = torch.zeros((1,2)).to(device)\n",
+    "#q_real_series = q_start\n",
+    "#q_d_real_series = q_d_start\n",
+    "#q_dd_real_series = q_dd_start\n",
     "\n",
+    "#q_base_series = q_start\n",
+    "#q_d_base_series = q_d_start\n",
+    "#q_dd_base_series = q_dd_start\n",
     "\n",
-    "q_real_series = q_start\n",
-    "q_d_real_series = q_d_start\n",
-    "q_dd_real_series = q_dd_start\n",
+    "th_series, th_d_series, th_dd_series = torch.empty((0,2)).to(device), torch.empty((0,2)).to(device), torch.empty((0,2)).to(device)\n",
+    "q_est_series, q_d_est_series, q_dd_est_series = torch.empty((0,2)).to(device), torch.empty((0,2)).to(device), torch.empty((0,2)).to(device)\n",
+    "q_real_series, q_d_real_series, q_dd_real_series = torch.empty((0,2)).to(device), torch.empty((0,2)).to(device), torch.empty((0,2)).to(device)\n",
+    "q_base_series, q_d_base_series, q_dd_base_series = torch.empty((0,2)).to(device), torch.empty((0,2)).to(device), torch.empty((0,2)).to(device)\n",
     "\n",
     "\n",
     "dt = 0.01\n",
     "t_end = 15\n",
+    "t_series = torch.arange(0, 15, 0.01)\n",
     "\n",
     "th = th_start\n",
     "th_d = th_d_start\n",
@@ -147,14 +141,24 @@
     "q_d_est = (model.jacobian_dec(th_start, clockwise=is_clockwise_start) @ th_d_start.T).T\n",
     "q_dd_est = torch.zeros((1,2))\n",
     "\n",
-    "q_real = q_start\n",
-    "q_d_real = q_d_start\n",
-    "q_dd_real = q_dd_start\n",
+    "q_real, q_d_real, q_dd_real = q_start, q_d_start, q_dd_start\n",
+    "q_base, q_d_base, q_dd_base = q_start, q_d_start, q_dd_start\n",
     "\n",
-    "is_clockwise = check_clockwise(q_start)\n",
+    "is_clockwise = transforms.check_clockwise(q_start.squeeze(0))\n",
     "\n",
-    "feedforward = True\n",
-    "gravity = False\n",
+    "feedforward = False\n",
+    "gravity = True\n",
+    "fix_q = True\n",
+    "model_cw = False\n",
+    "model_shifting = True\n",
+    "\n",
+    "if neural_net and fix_q:\n",
+    "    note_string = \"NOTE: The controller expects the NN to be trained on \" + (\"COUNTER\" if not model_cw else \"\") + \"CLOCKWISE data.\"\n",
+    "    print(note_string)\n",
+    "if model_shifting:\n",
+    "    print(\"NOTE: The controller expects points in q to be shifted (to make q-space unimodal).\")\n",
+    "\n",
+    "\n",
     "\n",
     "for t in torch.arange(0, t_end, dt):\n",
     "    print(\"Time:\", t.item().__round__(3))\n",
@@ -163,22 +167,31 @@
     "        q = model.decoder(th, is_clockwise)\n",
     "        q_d = (model.jacobian_dec(th, is_clockwise) @ th_d.T).T\n",
     "    else:\n",
-    "        q = q_real\n",
-    "        q_d = q_d_real\n",
+    "        is_clockwise = transforms.check_clockwise(q_real.squeeze(0))\n",
+    "        if fix_q and model_cw != is_clockwise:\n",
+    "            print(\"fixing value to cw\")\n",
+    "            q = transforms.flip_q(rp, q_real.squeeze(0), model_cw).unsqueeze(0)\n",
+    "            q_d = transforms.flip_q_d(rp, q_real, q_d_real, model_cw)\n",
+    "        else:\n",
+    "            q = q_real\n",
+    "            q_d = q_d_real\n",
     "\n",
+    "        if model_shifting:\n",
+    "            q = transforms.shift_q(q, clockwise=model_cw)\n",
     "        th = model.encoder(q)\n",
     "        th_d = (model.jacobian_enc(q) @ q_d.T).T\n",
+    "    \n",
     "\n",
     "    J_h = model.jacobian_enc(q)\n",
     "    J_h_trans = torch.transpose(J_h, 0, 1)\n",
     "\n",
-    "    is_clockwise = check_clockwise(q)\n",
+    "    is_clockwise = transforms.check_clockwise(q.squeeze(0))\n",
     "    \n",
     "    J_h_inv = model.jacobian_dec(th, is_clockwise).squeeze(0)\n",
     "    J_h_inv_trans = torch.transpose(J_h_inv, 0, 1)\n",
     "\n",
-    "    M_q, C_q, G_q = dynamics.dynamical_matrices(rp, q, q_d)\n",
-    "    A_q = dynamics.input_matrix(rp , q)\n",
+    "    M_q, C_q, G_q = dynamics.dynamical_matrices(rp, q.squeeze(0), q_d.squeeze(0))\n",
+    "    A_q = dynamics.input_matrix(rp, q.squeeze(0))\n",
     "\n",
     "\n",
     "    \"\"\" Feed-forward simulation of the system, not on real dynamics \"\"\"\n",
