Add gravity compensation

--- a/Kian_code/Controllers/PD.ipynb
+++ b/Kian_code/Controllers/PD.ipynb
@@ -195,18 +195,15 @@
     "\n",
     "\n",
     "    \"\"\" Feed-forward simulation of the system, not on real dynamics \"\"\"\n",
+    "    M_th, C_th, G_th = transforms.transform_dynamical_from_inverse(M_q, C_q, G_q, th, th_d, J_h_inv, J_h_inv_trans)\n",
     "    A_th = transforms.transform_input_matrix_from_inverse_trans(A_q, J_h_inv_trans, device)\n",
-    "    \n",
     "    u = torch.pinverse(A_th) @ ((Kp @ (th_des - th).T + Kd @ (th_d_des - th_d).T))\n",
     "    \n",
+    "    if gravity:\n",
+    "        u = u + torch.pinverse(A_th) @ G_th\n",
+    "\n",
     "    if feedforward:\n",
-    "        M_th, C_th, G_th = transforms.transform_dynamical_from_inverse(M_q, C_q, G_q, th, th_d, J_h_inv, J_h_inv_trans)\n",
-    "\n",
-    "        if gravity:\n",
-    "            u = u + torch.pinverse(A_th) @ G_th\n",
     "        tau_th = A_th * u\n",
-    "\n",
-    "        print(\"u at th:\", u)\n",
     "\n",
     "        if gravity:\n",
     "            th_dd = (torch.pinverse(M_th) @ (tau_th - C_th @ th_d.T - G_th)).T \n",
@@ -235,11 +232,8 @@
     "\n",
     "    \"\"\" Update the real system and apply latent control input. \"\"\"\n",
     "\n",
-    "    M_q_real, C_q_real, G_q_real = dynamics.dynamical_matrices(rp, q_real, q_d_real)\n",
-    "    A_q_real = dynamics.input_matrix(rp, q_real)\n",
-    "\n",
-    "    if gravity and not feedforward:\n",
-    "        u = u + torch.pinverse(A_q) @ G_q_real\n",
+    "    M_q_real, C_q_real, G_q_real = dynamics.dynamical_matrices(rp, q_real.squeeze(0), q_d_real.squeeze(0))\n",
+    "    A_q_real = dynamics.input_matrix(rp, q_real.squeeze(0))\n",
     "\n",
     "    tau_q_real = A_q_real * u\n",
     "\n",
