testing: wrap q and append to data properly

--- a/Kian_code/Controllers/PD.ipynb
+++ b/Kian_code/Controllers/PD.ipynb
@@ -197,6 +197,7 @@
     "    \"\"\" Feed-forward simulation of the system, not on real dynamics \"\"\"\n",
     "    M_th, C_th, G_th = transforms.transform_dynamical_from_inverse(M_q, C_q, G_q, th, th_d, J_h_inv, J_h_inv_trans)\n",
     "    A_th = transforms.transform_input_matrix_from_inverse_trans(A_q, J_h_inv_trans, device)\n",
+    "\n",
     "    u = torch.pinverse(A_th) @ ((Kp @ (th_des - th).T + Kd @ (th_d_des - th_d).T))\n",
     "    \n",
     "    if gravity:\n",
@@ -227,7 +228,7 @@
     "        q_d = (J_h_inv_new @ th_d.T).T\n",
     "        q_dd = (q_d - q_d_old)/dt\n",
     "        q = model.decoder(th, is_clockwise)\n",
-    "        q = wrap_to_pi(q)\n",
+    "        q = transforms.wrap_to_pi(q)\n",
     "    \n",
     "\n",
     "    \"\"\" Update the real system and apply latent control input. \"\"\"\n",
@@ -244,15 +245,24 @@
     "    \n",
     "    q_d_real = q_d_real + q_dd_real * dt\n",
     "    q_real = q_real + q_d_real * dt\n",
-    "    q_real = wrap_to_pi(q_real)\n",
+    "    q_real = transforms.wrap_to_pi(q_real)\n",
     "    \n",
     "    if feedforward:\n",
     "        q_est = q\n",
     "        q_d_est = q_d\n",
     "        q_dd_est = q_dd\n",
     "    else:\n",
-    "        th_est = model.encoder(q_real)\n",
-    "        q_est = model.decoder(th_est, is_clockwise)\n",
+    "        print(\"q_real:\", q_real)\n",
+    "        q_real_shifted = transforms.shift_q(q_real, clockwise=model_cw)\n",
+    "        #if q_real_shifted[0, 1]>torch.pi:\n",
+    "        #    print(\"ALARMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM\")\n",
+    "        print(\"q_real_shifted:\", q_real_shifted)\n",
+    "        th_est = model.encoder(q_real_shifted)\n",
+    "        print(\"th_est:\", th_est)\n",
+    "        q_est = model.decoder(th_est, clockwise=transforms.check_clockwise(q_real.squeeze(0)))\n",
+    "        print(\"q_est:\", q_est)\n",
+    "        q_est = transforms.wrap_to_pi(q_est)\n",
+    "        print(\"q_est_wrapped:\", q_est)\n",
     "        th_d_est = (model.jacobian_enc(q_real) @ q_d_real.T).T\n",
     "        q_d_est = (model.jacobian_dec(th_est, clockwise=is_clockwise) @ th_d_est.T).T\n",
     "        q_dd_est = q_dd_start = torch.tensor([[0., 0.]]).requires_grad_().to(device) #TODO: Implement with Jacobian derivative\n",
