--- a/Kian_code/Controllers/PD.ipynb
+++ b/Kian_code/Controllers/PD.ipynb
@@ -46,9 +46,13 @@
     "plotter = pendulum_plot.Anim_plotter(rp)\n",
     "neural_net = True\n",
     "\n",
+    "fix_q = True\n",
+    "model_cw = False\n",
+    "model_shifting = True\n",
+    "\n",
     "if neural_net:\n",
     "    model = autoencoders.Autoencoder_double(rp).to(device)\n",
-    "    model_location = '../Models/Split_AEs/Lumped_Mass_ccw_(2,5).pth'\n",
+    "    model_location = '../Models/Split_AEs/Lumped_Mass_ccw_12k_epochs.pth'\n",
     "    model.load_state_dict(torch.load(model_location, weights_only=True))\n",
     "else:\n",
     "    model = autoencoders.Analytic_transformer(rp)"
