Change configuration of starting q and q_des

--- a/Kian_code/Controllers/PD.ipynb
+++ b/Kian_code/Controllers/PD.ipynb
@@ -92,8 +92,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "q_start = torch.tensor([[-torch.pi/2, -torch.pi/2+0.1]]).requires_grad_().to(device)\n",
-    "#q_start = torch.tensor([[-1.5244, -3.0952]]).requires_grad_().to(device)\n",
+    "xy_start = torch.tensor([0., -2.]).requires_grad_().to(device)\n",
+    "q_start = transforms.inverse_kinematics(rp, xy_start, is_clockwise=model_cw).unsqueeze(0)\n",
+    "#q_start = torch.tensor([[-torch.pi/2, -torch.pi/2+0.1]]).requires_grad_().to(device)\n",
     "q_d_start = torch.tensor([[0., 0.]]).requires_grad_().to(device)\n",
     "#q_d_start = torch.tensor([[0.5, 0.5]]).requires_grad_().to(device)\n",
     "q_dd_start = torch.tensor([[0., 0.]]).requires_grad_().to(device)\n",
@@ -101,7 +102,7 @@
     "is_clockwise_start = transforms.check_clockwise(q_start.squeeze(0))\n",
     "\n",
     "xy_des_real = torch.tensor([2., -2.]).requires_grad_().to(device)\n",
-    "q_des = transforms.inverse_kinematics(rp, xy_des_real, is_clockwise=False).unsqueeze(0)\n",
+    "q_des = transforms.inverse_kinematics(rp, xy_des_real, is_clockwise=model_cw).unsqueeze(0)\n",
     "#q_des = torch.tensor([[-torch.pi/2, -torch.pi/4]]).requires_grad_().to(device)\n",
     "q_d_des = torch.tensor([[0., 0.]]).requires_grad_().to(device)\n",
     "\n",
