REMOVE feedforward support for controller

--- a/Kian_code/Controllers/PD.ipynb
+++ b/Kian_code/Controllers/PD.ipynb
@@ -149,7 +149,6 @@
     "\n",
     "is_clockwise = transforms.check_clockwise(q_start.squeeze(0))\n",
     "\n",
-    "feedforward = False\n",
     "gravity = True\n",
     "\n",
     "\n",
@@ -164,23 +163,20 @@
     "for t in torch.arange(0, t_end, dt):\n",
     "    print(\"Time:\", t.item().__round__(3))\n",
     "\n",
-    "    if feedforward:\n",
-    "        q = model.decoder(th, is_clockwise)\n",
-    "        q_d = (model.jacobian_dec(th, is_clockwise) @ th_d.T).T\n",
-    "    else:\n",
-    "        is_clockwise = transforms.check_clockwise(q_real.squeeze(0))\n",
-    "        if fix_q and model_cw != is_clockwise:\n",
-    "            print(\"fixing value to cw\")\n",
-    "            q = transforms.flip_q(rp, q_real.squeeze(0), model_cw).unsqueeze(0)\n",
-    "            q_d = transforms.flip_q_d(rp, q_real, q_d_real, model_cw)\n",
-    "        else:\n",
-    "            q = q_real\n",
-    "            q_d = q_d_real\n",
     "\n",
-    "        if model_shifting:\n",
-    "            q = transforms.shift_q(q, clockwise=model_cw)\n",
-    "        th = model.encoder(q)\n",
-    "        th_d = (model.jacobian_enc(q) @ q_d.T).T\n",
+    "    is_clockwise = transforms.check_clockwise(q_real.squeeze(0))\n",
+    "    if fix_q and model_cw != is_clockwise:\n",
+    "        print(\"fixing value to\", \"clockwise\" if model_cw else \"counterclockwise\")\n",
+    "        q = transforms.flip_q(rp, q_real.squeeze(0), model_cw).unsqueeze(0)\n",
+    "        q_d = transforms.flip_q_d(rp, q_real, q_d_real, model_cw)\n",
+    "    else:\n",
+    "        q = q_real\n",
+    "        q_d = q_d_real\n",
+    "\n",
+    "    if model_shifting:\n",
+    "        q = transforms.shift_q(q, clockwise=model_cw)\n",
+    "    th = model.encoder(q)\n",
+    "    th_d = (model.jacobian_enc(q) @ q_d.T).T\n",
     "    \n",
     "\n",
     "    J_h = model.jacobian_enc(q)\n",
@@ -204,34 +200,6 @@
     "    if gravity:\n",
     "        u = u + torch.pinverse(A_th) @ G_th\n",
     "\n",
-    "    if feedforward:\n",
-    "        tau_th = A_th * u\n",
-    "\n",
-    "        if gravity:\n",
-    "            th_dd = (torch.pinverse(M_th) @ (tau_th - C_th @ th_d.T - G_th)).T \n",
-    "        else:\n",
-    "            th_dd = (torch.pinverse(M_th) @ (tau_th - C_th @ th_d.T)).T\n",
-    "\n",
-    "        th = th.detach().requires_grad_()\n",
-    "        th_d = th_d.detach().requires_grad_()\n",
-    "        th_dd = th_dd.detach().requires_grad_()\n",
-    "\n",
-    "        th_d = th_d + th_dd * dt\n",
-    "        th = th + th_d * dt\n",
-    "\n",
-    "        q = q.detach().requires_grad_()\n",
-    "        q_d = q_d.detach().requires_grad_()\n",
-    "        #q_dd = q_dd.detach().requires_grad_()\n",
-    "        \n",
-    "        J_h_inv_new = model.jacobian_dec(th, is_clockwise).squeeze(0)\n",
-    "\n",
-    "        q_d_old = q_d\n",
-    "        q_d = (J_h_inv_new @ th_d.T).T\n",
-    "        q_dd = (q_d - q_d_old)/dt\n",
-    "        q = model.decoder(th, is_clockwise)\n",
-    "        q = transforms.wrap_to_pi(q)\n",
-    "    \n",
-    "\n",
     "    \"\"\" Update the real system and apply latent control input. \"\"\"\n",
     "\n",
     "    M_q_real, C_q_real, G_q_real = dynamics.dynamical_matrices(rp, q_real.squeeze(0), q_d_real.squeeze(0))\n",
@@ -248,25 +216,14 @@
     "    q_real = q_real + q_d_real * dt\n",
     "    q_real = transforms.wrap_to_pi(q_real)\n",
     "    \n",
-    "    if feedforward:\n",
-    "        q_est = q\n",
-    "        q_d_est = q_d\n",
-    "        q_dd_est = q_dd\n",
-    "    else:\n",
-    "        print(\"q_real:\", q_real)\n",
-    "        q_real_shifted = transforms.shift_q(q_real, clockwise=model_cw)\n",
-    "        #if q_real_shifted[0, 1]>torch.pi:\n",
-    "        #    print(\"ALARMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM\")\n",
-    "        print(\"q_real_shifted:\", q_real_shifted)\n",
-    "        th_est = model.encoder(q_real_shifted)\n",
-    "        print(\"th_est:\", th_est)\n",
-    "        q_est = model.decoder(th_est, clockwise=transforms.check_clockwise(q_real.squeeze(0)))\n",
-    "        print(\"q_est:\", q_est)\n",
-    "        q_est = transforms.wrap_to_pi(q_est)\n",
-    "        print(\"q_est_wrapped:\", q_est)\n",
-    "        th_d_est = (model.jacobian_enc(q_real) @ q_d_real.T).T\n",
-    "        q_d_est = (model.jacobian_dec(th_est, clockwise=is_clockwise) @ th_d_est.T).T\n",
-    "        q_dd_est = q_dd_start = torch.tensor([[0., 0.]]).requires_grad_().to(device) #TODO: Implement with Jacobian derivative\n",
+    "\n",
+    "    q_real_shifted = transforms.shift_q(q_real, clockwise=model_cw)\n",
+    "    th = model.encoder(q_real_shifted)\n",
+    "    q_est = model.decoder(th, clockwise=transforms.check_clockwise(q_real.squeeze(0)))\n",
+    "    q_est = transforms.wrap_to_pi(q_est)\n",
+    "    th_d = (model.jacobian_enc(q_real) @ q_d_real.T).T\n",
+    "    q_d_est = (model.jacobian_dec(th, clockwise=is_clockwise) @ th_d.T).T\n",
+    "    q_dd_est = torch.tensor([[0., 0.]]).requires_grad_().to(device) #TODO: Implement with Jacobian derivative\n",
     "\n",
     "\n",
     "    \"\"\" Store data for plotting \"\"\"\n",
@@ -350,14 +307,8 @@
     "else:\n",
     "    model_type = \"AL\"\n",
     "\n",
-    "if feedforward:\n",
-    "    controller_type = \"feedforward\" \n",
-    "else:\n",
-    "    controller_type = \"feedback\"\n",
     "\n",
-    "\n",
-    "\n",
-    "file_name = name_base + model_type + \"_\" + controller_type\n",
+    "file_name = \"damp\" + name_rp + name_ref + model_type\n",
     "if not gravity:\n",
     "    file_name = file_name + \"_no_G\"\n",
     "file_name_gif = file_name + \".gif\"\n",
